# coin

./: CMakeLists.txt  appveyor.yml
Ipopt/: CMakeLists.txt
cmake/: CMakeLists.txt  Ipopt-config.cmake.in
